# github-connect-quest

./: PROJECTS_COLLABORATION_GUIDE_Version2.md  README.md  index.html
Unified-AI-Project-main/: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  conftest.py  debugging_summary.md  dependency_config.yaml  installer.py  installer_cli.py  installer_ja_JP.ts  package-lock.json  package.json  pyproject.toml  report.json  requirements.txt  setup.py  test_hsp_connector.py
Unified-AI-Project-main/.vercel/: project.json
Unified-AI-Project-main/configs/: api_keys.yaml  crisis_system_config.json  ontology_mappings.yaml  prompts.yaml  simulated_resources.yaml  system_config.yaml  version_manifest.json
Unified-AI-Project-main/configs/formula_configs/: default_formulas.json
Unified-AI-Project-main/configs/personality_profiles/: miko_base.json
Unified-AI-Project-main/data/chat_histories/: ollama_chat_histories.json
Unified-AI-Project-main/data/firebase/: firestore.rules
Unified-AI-Project-main/data/game_data/: knowledge_graph_mapping.json  npcs.json
Unified-AI-Project-main/data/knowledge_bases/: LingCat_emotion_map.yaml  LingCat_neko_quotes.json  MikoAI_formulas.json  MikoAI_personality.json
Unified-AI-Project-main/data/models/: lightweight_logic_model.json  lightweight_math_model.json
Unified-AI-Project-main/data/processed_data/: dialogue_context_memory.json  dialogue_manager_test_ham_04f619b46c294319ac9a0a14fbf27610.json  dialogue_manager_test_ham_20e2412ae50d4900acf20934e24036e6.json  dialogue_manager_test_ham_4c642d78627a4e148fb780ea2cec7c4e.json  dialogue_manager_test_ham_53475186ed6346d88c214281a0ced31c.json  dialogue_manager_test_ham_5bff20cf24bd4d7a92d442c4a3a4250a.json  dialogue_manager_test_ham_82d30962f1884d8a934cd1dd0b257b40.json  dialogue_manager_test_ham_97232c2649024e8da14e3e404cbc3c12.json  ham_core_did_hsp_api_server_ai_168f7f.json  ham_core_did_hsp_api_server_ai_271715.json  ham_core_did_hsp_api_server_ai_43e1f2.json  test_delete_old.json
Unified-AI-Project-main/data/raw_datasets/: DummyModel.json  arithmetic_test_dataset.csv  arithmetic_train_dataset.json  logic_test.json  logic_train.json  ollama_cat_formulas_log.json
Unified-AI-Project-main/docs/: CLEANUP_SUMMARY.md  DOCUMENT_INDEX.md  GLOSSARY.md  PROJECT_CHARTER.md  README.md  ROADMAP.md
Unified-AI-Project-main/docs/archive/: LEGACY_PROJECT_SUMMARY.md  README.md
Unified-AI-Project-main/docs/development/: MERGE_AND_RESTRUCTURE_PLAN.md  TODO_PLACEHOLDERS.md
Unified-AI-Project-main/docs/game/: README.md  SUCCESS_CRITERIA.md  character_design.md  character_design_angela.md  game_systems.md  main_design.md  map_design.md
Unified-AI-Project-main/docs/philosophy/: PHILOSOPHY_AND_VISION.md
Unified-AI-Project-main/docs/project_management/: CLEANUP_REPORT_2025.md  DOCUMENTATION_OPTIMIZATION_REPORT.md  DOCUMENTATION_REORGANIZATION_2025.md  IMMEDIATE_ACTION_PLAN.md  MISSION_ACCOMPLISHED.md  PROJECT_ACCELERATION_PLAN.md  PROJECT_CONTENT_ORGANIZATION.md  PROJECT_STATUS_SUMMARY.md  QUICK_WINS.md  TODO_FIX_REPORT.md
Unified-AI-Project-main/docs/project_status/: DAILY_WINS_SUMMARY.md  PROGRESS_TRACKER.md  PROJECT_ORGANIZATION_STATUS.md  SUCCESS_CRITERIA.md  TODAY_ACHIEVEMENTS.md
Unified-AI-Project-main/docs/technical_design/: ANGELA_OPTIMIZATION_LIMITATIONS.md  API_AND_ENDPOINT_SUMMARY.md  ARCHITECTURE_OVERVIEW.md  CONTEXT7_MCP_INTEGRATION.md  CORE_SERVICES_OVERVIEW.md  DEEP_MAPPER.md  HSP_QUICK_START.md  HSP_SPECIFICATION.md  INTERNAL_DATA_STANDARDS.md  PARAMETER_EXTRACTOR.md  message_processing_guidelines.md
Unified-AI-Project-main/docs/technical_specs/: MESSAGE_TRANSPORT.md  MODELS_AND_TOOLS.md  README_EXECUTION_MONITOR.md  TROUBLESHOOTING.md
Unified-AI-Project-main/docs/testing/: TEST_FIXES_SUMMARY.md  test_summary.md
Unified-AI-Project-main/scripts/: add_pytest_timeouts.py  add_test_timeouts.py  add_timeout_to_tests.py  check_ai_docstrings.py  compare_imports.py  execution_monitor_cli.py  fix_todos.py  generate_pyproject_deps.py  health_check.py  mock_hsp_peer.py  project_setup_utils.py  run_deep_mapper_example.py  run_parameter_extractor_example.py  run_simple_tests.sh  scan_imports.py  setup_env.bat  setup_env.sh  style_check.py  test_execution_monitor.py  validate_doc_links.py  validate_mcp_types.py
Unified-AI-Project-main/scripts/data_processing/: ingest_processed_logs_to_ham.py  process_copilot_logs.py
Unified-AI-Project-main/scripts/prototypes/: miko_core_ham_prototype.py
Unified-AI-Project-main/src/: core_services.py
Unified-AI-Project-main/src/agents/: base_agent.py  creative_writing_agent.py  data_analysis_agent.py  image_generation_agent.py  web_search_agent.py
Unified-AI-Project-main/tests/: conftest.py  test_dependency_manager.py  test_simple.py
src/: App.tsx
(+236 files in other folders)
